--- a/MovieTweets/WebContent/style.css
+++ b/MovieTweets/WebContent/style.css
@@ -12,19 +12,19 @@ h2 {
 
 li {
 	border: solid;
-	padding: 5px;
+	padding: 12px;
 	margin: 20px;
-	width: 200px;
+	width: 300px;
 	list-style-type: none;
 	float: left;
 	border-width: 1px;
 	border-color: lightblue;
+	height: 80px;
 }
-
 
 select {
     background: transparent;
-    width: 328px;
+    width: 478px;
     padding: 5px;
     font-size: 16px;
     line-height: 1;
@@ -35,12 +35,13 @@ select {
 }
 
 .styled-select {
-   width: 300px;
+   width: 450px;
    height: 34px;
    overflow: hidden;
    background: url(images/arrow.png) no-repeat right white;
    border: 1px solid #ccc;
    margin: 100px;
+   margin-left: 50px;
    }
 
 #welcome {
@@ -50,7 +51,7 @@ select {
 .header {
     width: 100%;
     height: 250px;
-    
+    min-width: 1100px;
     background: #002db4; /* Old browsers */
     background: -moz-linear-gradient(left,  #002db4 0%, #9800ca 52%, #ea0400 100%); /* FF3.6+ */
     background: -webkit-gradient(linear, left top, right top, color-stop(0%,#002db4), color-stop(52%,#9800ca), color-stop(100%,#ea0400)); /* Chrome,Safari4+ */
@@ -77,4 +78,5 @@ select {
 .content {
     width: 100%;
     text-align: center;
+    min-width: 1100px;
 }
